--- a/cb_maintenance/wizards/wizard_create_maintenance_request.xml
+++ b/cb_maintenance/wizards/wizard_create_maintenance_request.xml
@@ -16,7 +16,7 @@
                     </group>
                     <group>
                         <field name="maintenance_team_id"/>
-                        <field name="location_id" options="{'child_selection_field': 'name'}"/>
+                        <field name="location_id" widget="child_selector" options="{'child_selection_field': 'name'}"/>
                     </group>
                 </group>
                 <group>
