--- a/maintenance_request_consume/views/maintenance_request.xml
+++ b/maintenance_request_consume/views/maintenance_request.xml
@@ -10,14 +10,21 @@
         <field name="inherit_id" ref="maintenance.hr_equipment_request_view_form"/>
         <field name="arch" type="xml">
             <field name="priority" position="after">
-                <field name="consumable_ids">
-                    <tree editable="bottom">
-                        <field name="product_id"/>
-                        <field name="used_qty"/>
-                        <field name="stock_location_id"/>
-                        <field name="state"/>
-                    </tree>
-                </field>
+                <label for="consumable_ids" string="Consumables"/>
+                <div>
+                    <field name="consumable_ids">
+                        <tree editable="bottom">
+                            <field name="product_id" options="{'no_open':True,'no_create':True}"/>
+                            <field name="used_qty"/>
+                            <field name="stock_location_id" options="{'no_open':True,'no_create':True}"/>
+                            <field name="state"/>
+                        </tree>
+                    </field>
+                    <div class="oe_right">
+                        <button string="Consume" name="consume_products" class="oe_highlight"
+                                type="action"/>
+                    </div>
+                </div>
             </field>
         </field>
     </record>
