--- a/maintenance_request_consume/views/maintenance_request.xml
+++ b/maintenance_request_consume/views/maintenance_request.xml
@@ -22,7 +22,7 @@
                     </field>
                     <div class="oe_right">
                         <button string="Consume" name="consume_products" class="oe_highlight"
-                                type="action"/>
+                                type="object"/>
                     </div>
                 </div>
             </field>
