--- a/maintenance_request_purchase/wizards/wizard_link_maintenance_po.xml
+++ b/maintenance_request_purchase/wizards/wizard_link_maintenance_po.xml
@@ -13,6 +13,7 @@
                     <h5>Select Purchase Orders and Link them or Create a new Purchase Order</h5>
                 </div>
                 <group>
+                    <field name="maintenance_request_id" invisible="1"/>
                     <field name="purchase_order_ids" widget="many2many_tags"/>
                 </group>
                 <footer>
@@ -32,7 +33,7 @@
         <field name="name">Link to PO</field>
         <field name="res_model">wizard.link.maintenance.po</field>
         <field name="view_mode">form</field>
-        <field name="context">{}</field>
+        <field name="context">{'default_maintenance_request_id': active_id}</field>
         <field name="target">new</field>
     </record>
 
