[11.0][IMP] Request Tags with team hieararchy

--- a/maintenance_request_tags/views/maintenance_request.xml
+++ b/maintenance_request_tags/views/maintenance_request.xml
@@ -13,7 +13,7 @@
                 <field name="selectable_tags_ids" invisible="1"/>
                 <field name="tag_ids" widget="many2many_tags"
                        options="{'color_field': 'color', 'no_create_edit': True}"
-                       placeholder="e.g. Computers" domain="[('id', 'in', selectable_tags_ids)]"
+                       placeholder="e.g. Computers" domain="['|', ('id', 'in', selectable_tags_ids), ('selectable_team_count', '=', 0)]"
                 />
             </xpath>
         </field>
