--- a/cb_maintenance/wizards/wizard_create_maintenance_request.xml
+++ b/cb_maintenance/wizards/wizard_create_maintenance_request.xml
@@ -15,7 +15,7 @@
                         <field name="severity"/>
                     </group>
                     <group>
-                        <field name="maintenance_team_id"/>
+                        <field name="equipment_category" options="{'no_create': True, 'no_open': True}"/>
                         <field name="location_id" widget="child_selector" options="{'child_selection_field': 'name'}"/>
                     </group>
                 </group>
