--- a/maintenance_request_purchase/views/maintenance_request.xml
+++ b/maintenance_request_purchase/views/maintenance_request.xml
@@ -10,7 +10,7 @@
         <field name="inherit_id" ref="maintenance.hr_equipment_request_view_form"/>
         <field name="arch" type="xml">
             <button name="archive_equipment_request" position="before">
-                <button string="Link to PO" name="%(maintenance_request_purchase.wizard_link_maintenance_po_act_window)d" class="oe_highlight"
+                <button string="Link to PO" name="%(maintenance_request_purchase.wizard_link_maintenance_po_act_window)d"
                         type="action" attrs="{'invisible': [('archive', '=', True)]}" context="{'default_maintenance_request_id': active_id}"/>
             </button>
         </field>
