[11.0][IMP] More fixes to cb_maintenance and project

--- a/cb_maintenance/views/maintenance_equipment_category.xml
+++ b/cb_maintenance/views/maintenance_equipment_category.xml
@@ -12,6 +12,9 @@
             <field name="technician_user_id" position="before">
                 <field name="maintenance_team_id" attrs="{'required': [('parent_id', '=', False)]}"/>
             </field>
+            <field name="technician_user_id" position="after">
+                <field name="selectable"/>
+            </field>
         </field>
     </record>
 
