--- a/cb_maintenance/views/maintenance_request.xml
+++ b/cb_maintenance/views/maintenance_request.xml
@@ -18,16 +18,12 @@
             <xpath expr="//label[@for='name']" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath>
-            <field name="name" position="before">
-                <i class="fa fa-home" attrs="{'invisible': [('maintenance_type', '!=', 'preventive')]}" style="margin-right: 10px"/>
-                <i class="fa fa-tools" attrs="{'invisible': [('maintenance_type', '!=', 'corrective')]}" style="margin-right: 10px"/>
-            </field>
 
             <button name="archive_equipment_request" position="before">
                 <button string="Assign to another Team" name="%(cb_maintenance.wizard_change_maintenance_team_act_window)d"
                         type="action" attrs="{'invisible': [('archive', '=', True)]}"/>
                 <button string="Split Request" name="split_request"
-                        type="object" attrs="{'invisible': [('archive', '=', True)]}"/>
+                        type="object" attrs="{'invisible': [('maintenance_type', '!=', 'corrective')]}"/>
             </button>
 
             <xpath expr="//span[hasclass('label')]/.." position="after">
@@ -57,11 +53,6 @@
             <xpath expr="//div[hasclass('oe_right')]" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath>
-
-            <field name="name" position="after">
-                <span style="margin-left: 0.5em"/>
-                <field name="kanban_state" class="oe_inline" widget="state_selection"/>
-            </field>
 
             <field name="description" position="attributes">
                 <attribute name="invisible">1</attribute>
@@ -104,6 +95,20 @@
             <field name="stage_id" position="after">
                 <field name="state" widget="statusbar"/>
             </field>
+
+            <xpath expr="//label[@for='schedule_date']" position="attributes">
+                <attribute name="class">oe_edit_only</attribute>
+            </xpath>
+            <xpath expr="//div[hasclass('o_row')]" position="attributes">
+                <attribute name="class">o_row oe_edit_only</attribute>
+            </xpath>
+            <xpath expr="//div[hasclass('o_row')]" position="after">
+                <label for="schedule_info" class="oe_read_only" string="Schedule Date"/>
+                <div class="oe_read_only o_row">
+                    <field name="schedule_info"/>
+                </div>
+            </xpath>
+
         </field>
     </record>
 
