--- a/cb_maintenance/views/maintenance_team.xml
+++ b/cb_maintenance/views/maintenance_team.xml
@@ -9,9 +9,6 @@
         <field name="model">maintenance.team</field>
         <field name="inherit_id" ref="maintenance.maintenance_team_view_form"/>
         <field name="arch" type="xml">
-            <field name="member_ids" position="before">
-                <field name="default_user_id" options="{'no_create': True}"/>
-            </field>
             <field name="member_ids" position="attributes">
                 <attribute name="options">{'no_create': True}</attribute>
             </field>
@@ -26,6 +23,20 @@
             <field name="user_id" position="attributes">
                 <attribute name="options">{'no_create': True}</attribute>
             </field>
+        </field>
+    </record>
+
+    <record model="ir.ui.view" id="maintenance_team_kanban">
+        <field name="name">maintenance.team.form (in cb_maintenance)</field>
+        <field name="model">maintenance.team</field>
+        <field name="inherit_id" ref="maintenance.maintenance_team_kanban"/>
+        <field name="arch" type="xml">
+            <xpath expr="//div[hasclass('o_kanban_primary_right')]/div/div[5]" position="attributes">
+                <attribute name="t-if">1==0</attribute>
+            </xpath>
+            <xpath expr="//div[hasclass('o_kanban_primary_right')]/div/div[6]" position="attributes">
+                <attribute name="t-if">1==0</attribute>
+            </xpath>
         </field>
     </record>
 
