--- a/cb_maintenance/wizards/wizard_create_maintenance_request.xml
+++ b/cb_maintenance/wizards/wizard_create_maintenance_request.xml
@@ -12,7 +12,7 @@
                 <group>
                     <group>
                         <field name="name"/>
-                        <field name="severity"/>
+                        <field name="priority" widget="priority"/>
                     </group>
                     <group>
                         <field name="equipment_category" options="{'no_create': True, 'no_open': True}"/>
