--- a/cb_maintenance/views/maintenance_stage.xml
+++ b/cb_maintenance/views/maintenance_stage.xml
@@ -23,6 +23,9 @@
             <field name="name" position="after">
                 <field name="state"/>
             </field>
+            <field name="fold" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </field>
             <field name="done" position="attributes">
                 <attribute name="invisible">1</attribute>
             </field>
