--- a/cb_maintenance/views/maintenance_team.xml
+++ b/cb_maintenance/views/maintenance_team.xml
@@ -26,6 +26,20 @@
         </field>
     </record>
 
+    <record model="ir.ui.view" id="maintenance_request_sequence.maintenance_team_view_form">
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='member_ids']/.." position="after">
+                <group>
+                    <label for="code_prefix"/>
+                    <div>
+                        <field name="code_prefix" style="padding-right: 1.0em" class="oe_inline"/>
+                        <field name="sequence_id" groups="base.group_no_one"/>
+                    </div>
+                </group>
+            </xpath>
+        </field>
+    </record>
+
     <record model="ir.ui.view" id="maintenance_team_kanban">
         <field name="name">maintenance.team.form (in cb_maintenance)</field>
         <field name="model">maintenance.team</field>
