--- a/cb_maintenance/views/maintenance_equipment.xml
+++ b/cb_maintenance/views/maintenance_equipment.xml
@@ -52,6 +52,10 @@
             <filter name="my" position="attributes">
                 <attribute name="invisible">1</attribute>
             </filter>
+            <filter name="my" position="after">
+                <separator/>
+                <filter string="Has Maintenance Plans" name="has_plans" domain="[('maintenance_plan_count', '!=', 0)]"/>
+            </filter>
         </field>
     </record>
 
